--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^9.8.6",
+    "date-fns": "^2.16.1",
     "firebase": "^8.2.4",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
@@ -22,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build-css": "tailwindcss build src/styles.css -o public/styles.css"
+    "build:css": "tailwindcss build src/styles.css -o public/tailwind.css"
   },
   "eslintConfig": {
     "extends": [
